...
@Composable
private fun FilterBottomSheetPreview() {
    AmroTheme {
        Surface {
            FilterBottomSheetContent(
                availableGenres = persistentListOf(
                    Genre(1, "Action"),
                    Genre(2, "Comedy"),
                    Genre(3, "Drama"),
                    Genre(4, "Sci-Fi"),
                    Genre(5, "Thriller")
                ),
                selectedGenres = persistentSetOf(1, 3),
                onGenreSelect = {},
...
